Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53594

QCameraViewfinder broken scaling with QT::KeepAspectRatio on Windows 10

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.11.0
    • 5.5.1, 5.6.0
    • Multimedia
    • None
    • Windows 10, Qt 5.6.0 MSVC2015 64bit, different Webcams (via DirectShow)

      Works correctly on Kubuntu 16.04, Qt 5.6.0, GCC, Webcam (via gstreamer?)

    Description

      Steps to reproduce (hint: the example in multimediawidgets/camera resembles these steps):

      • use Qt 5.6.0 on Windows 10 with a webcam
      • take a QCameraViewfinder widget
      • setAspectRatioMode(Qt::KeepAspectRatio);
      • resize it so that the widget's width gets smaller than the camera's native image but the hight bigger than the camera's natives image

      Result: The camera's image gets painted once in a whole, squeezed horizontally, starting at the top-left of the widget. The following frames are updated in a correct scaled rectangle, correctly centered vertically in the widget. But the content of that updated rectangle is only the part of the squeezed image, overlapping the correctly scaled rectangle. The part of the image, not overlapping the correct rectangle remains freezed until the next resizeEvent.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            niun niun
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes