Fix target rectangle coordinates while painting image with QPainter

QRectF::setX() may change the width.
QRectF::setY() may change the height.

If either width or height has been adjusted incorrect target rect is applied to draw an image
which will cause some artefacts to be shown (like rectangle with a garbage)
and incorrect size of actual content.

Task-number: QTBUG-53594
Change-Id: Iee92aaf908952d7809e8ad62f8d1126b7ecac642
Reviewed-by: Christian Stromme <christian.stromme@qt.io>